testsuite/tests/properties/invalid_generics/astlist_arity.lkt
import common

class ExampleSeq: FooNode {
    @parse_field items: ASTList[Example]
}
